# ClamansUnguis

./: run_all.sh
.catkin_tools/profiles/default/: devel_collisions.txt
configs/: yolov4-tiny-synth-mk1.cfg
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/navigation/: .catkin  local_setup.sh
devel/.private/reacher/: .catkin
devel/.private/vision/: .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  navigation.pc  reacher.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/navigation/cmake/: navigationConfig-version.cmake  navigationConfig.cmake
logs/vision/: build.check.008.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.012.log.stderr
src/navigation/src/: navigation.py
src/old/: CMakeLists.txt  package.xml
src/old/src/: coordinates.py  reacher.py  reacherNOROS.py
src/oldnav/src/: navigation.py
src/reacher/src/: MK4.onnx  coordinates.py  reach.py  reacher.py  test.py
src/test/: test.py
src/vision/: CMakeLists.txt  package.xml
src/vision/src/: README.md  camkeold.txt  cmakeold.txt
src/vision/src/modules/: trt_utils.cpp
src/vision/src/samples/: sample_detector.cpp
(+8 files in other folders)
