<?xml version="1.0"?>
<package format="2">
  <name>vision</name>
  <version>0.0.0</version>
  <description>The vision package</description>

  <maintainer email="dylan@todo.todo">dylan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>roslib</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>libcuda1</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>

